[ 추가 ] 기초 기능 추가
- 길드원 추가, 삭제, 수정 기능
- 디스코드 메시지 분석 기능