@@ -33,3 +33,14 @@ application {
 test {
     useJUnitPlatform()
 }
+
+// 실행 시 인코딩 설정
+tasks.withType(JavaExec) {
+    systemProperty 'file.encoding', 'UTF-8'
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+}
+
+// 컴파일 시 인코딩 설정
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
